Fix for removing horizontal scrollbar due to Chrome update for CSS spec change

--- a/player.css
+++ b/player.css
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014 Google Inc. All Rights Reserved.
+ * Copyright 2016 Google Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -37,7 +37,6 @@
 
 body {
   background-color: #000;
-  overflow:hidden;
 }
 
 .player {
@@ -97,6 +96,7 @@ body {
 .player .media-info {
   padding-bottom: 54px;
   display: flex;
+  overflow: hidden;
 }
 
 .player .media-artwork {
@@ -242,6 +242,7 @@ body {
   padding-bottom: 54px;
   display: none;
   margin: -143px 0 0 0;
+  overflow: hidden;
 }
 
 .player .preview-mode-artwork {
